fixed overflow problem

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root{
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden ;
 }
 
 #top{
@@ -30,7 +31,7 @@ header{
   justify-content: space-evenly;
   align-items: center;
   width: 100%;
-  background-color: black;
+  background-color: #131212;
   position: sticky;
   top: 0px;
   z-index: 1;
@@ -47,8 +48,8 @@ i{
 .quick_refine{
   display: flex;
   position: sticky;
-  top: 70px;
-  background-color: black;
+  top: 87px;
+  background-color: #131212;
   z-index: 1;
   width: 100vw;
   border-radius: 0px 0px 30px 30px;
@@ -63,10 +64,10 @@ button.quick_button{
   padding: .6rem;
   border-radius: 50%;
   margin: 0.2rem;
-  background: rgba(0, 0, 0, 0.5);
   border: 0;
   height: 55px;
   width: 55px;
+  background: none;
 }
 
 .meat-on, .pizza-on, .seafood-on, .tacos-on, .breakfast-on, .drinks-on{
@@ -183,10 +184,10 @@ footer{
 
 .custom-select{
 display: flex;
-padding: 1rem;
+padding: 2rem;
 justify-content: center;
 align-items: center;
-background-color: black;
+background-color: #131212;
 }
 
 .custom-select p{
